Fix bug and disable python